--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:theme="@style/Theme.CriminalIntent"
         tools:targetApi="31">
         <activity
-            android:name=".CrimeActivity"
-            android:exported="true" >
+            android:name=".CrimeListActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CrimeActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
